--- a/chat/src/main/resources/application.properties
+++ b/chat/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.database=bezkoder_db
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=mongoSpring
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=mongoSpring
+spring.data.mongodb.port=27019
+spring.data.mongodb.host=localhost
