add avatar to upload and save and view

--- a/chat/src/main/resources/application.properties
+++ b/chat/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=bezkoder_db
+spring.data.mongodb.database=ravtech_messages
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.host=mongoSpring
 spring.data.mongodb.port=27019
